Added image to README

--- a/README
+++ b/README
@@ -6,3 +6,8 @@ https://uscensusbureau.github.io/citysdk/
 
 The concept we explore is looking at population change per state in both a graphical and aural context. For example, if the male population grew more than the female population in a given state between 1990 and 2010 then a musical tone actuates. This tone quickly conveys the information while simultaneously the data is visualized using hexagons whose size are proportional to their population value.
 
+A live version of the software is here: https://course.fathom.info/c/tice_brian/final/PopulationChange/
+
+
+
+![alt tag](https://cloud.githubusercontent.com/assets/2002197/13961956/2ef6a76c-f035-11e5-9b03-0d085fc44ba3.png)
